/*
 * Copyright 2017-2025 O2 Czech Republic, a.s.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package cz.o2.proxima.example;
option java_outer_classname = "Example";


message UserDetails {
  string name = 1;
  string email = 2;
  // ...
}

message UserPreferences {
  repeated float preferenceWeights = 1;
}

message BaseEvent {
  enum Action {
    UNKNONW = 0;
    BUY = 1;
    VIEW = 2;
    RETURN = 3;
  }
  string userId = 1;
  string productId = 2;
  Action action = 3;
}

message Price {
  float price = 1;
  float vat = 2;
}

message ProductDetails {
  string name = 1;
  // ...
}

message ProductCategory {
  string name = 1;
  // ...
}
